--- a/p1ch4/4_time_series_bikes.ipynb
+++ b/p1ch4/4_time_series_bikes.ipynb
@@ -721,27 +721,58 @@
       "metadata": {
         "id": "UgKwJ2NrlYGb",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "191cab28-8275-461a-dcb3-35e403130d72"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        },
+        "outputId": "b59a82bb-906c-41e4-ac05-cbed4933478c"
       },
       "source": [
         "daily_weather_onehot.scatter_(\n",
         "    1, daily_bikes[:,9,:].long().unsqueeze(1) - 1, 1.0)\n",
-        "daily_weather_onehot.shape"
+        "print(daily_weather_onehot.shape)\n",
+        "daily_weather_onehot"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([730, 4, 24])\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([730, 4, 24])"
+              "tensor([[[1., 1.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 1., 1.],\n",
+              "         [0., 0.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0.,  ..., 1., 1.],\n",
+              "         [1., 1.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0.,  ..., 1., 1.],\n",
+              "         [1., 1.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.]],\n",
+              "\n",
+              "        [[1., 1.,  ..., 1., 1.],\n",
+              "         [0., 0.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.],\n",
+              "         [0., 0.,  ..., 0., 0.]]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
     },
@@ -750,26 +781,172 @@
       "metadata": {
         "id": "kvbBlJrxlYGd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 476
+        },
+        "outputId": "93d27280-b2a2-492e-fc91-a86c22490a91"
       },
       "source": [
-        "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)"
+        "print(daily_bikes.shape)\n",
+        "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)\n",
+        "print(daily_bikes.shape)\n",
+        "daily_bikes"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([730, 17, 24])\n",
+            "torch.Size([730, 21, 24])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1.0000e+00, 2.0000e+00,  ..., 2.3000e+01, 2.4000e+01],\n",
+              "         [1.0000e+00, 1.0000e+00,  ..., 1.0000e+00, 1.0000e+00],\n",
+              "         ...,\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00],\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00]],\n",
+              "\n",
+              "        [[2.5000e+01, 2.6000e+01,  ..., 4.6000e+01, 4.7000e+01],\n",
+              "         [2.0000e+00, 2.0000e+00,  ..., 2.0000e+00, 2.0000e+00],\n",
+              "         ...,\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00],\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[1.7332e+04, 1.7333e+04,  ..., 1.7354e+04, 1.7355e+04],\n",
+              "         [3.0000e+01, 3.0000e+01,  ..., 3.0000e+01, 3.0000e+01],\n",
+              "         ...,\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00],\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00]],\n",
+              "\n",
+              "        [[1.7356e+04, 1.7357e+04,  ..., 1.7378e+04, 1.7379e+04],\n",
+              "         [3.1000e+01, 3.1000e+01,  ..., 3.1000e+01, 3.1000e+01],\n",
+              "         ...,\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00],\n",
+              "         [0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sEgCra-1xfst",
+        "colab_type": "text"
+      },
+      "source": [
+        "We mentioned earlier that this is not the only way to treat our “weather situation” variable. Indeed, its labels have an ordinal relationship, so we could pretend they are special values of a continuous variable. We could just transform the variable so that it runs\n",
+        "from 0.0 to 1.0:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ONZpDvszxRZW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "e40ea1e0-e447-4d63-caf5-a982c8552d1d"
+      },
+      "source": [
+        "print(daily_bikes[:, 9, :] .shape)\n",
+        "daily_bikes[:, 9, :] "
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([730, 24])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1.,  ..., 2., 2.],\n",
+              "        [2., 2.,  ..., 1., 1.],\n",
+              "        ...,\n",
+              "        [2., 2.,  ..., 1., 1.],\n",
+              "        [1., 1.,  ..., 1., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "UhmhblKzlYGg",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "db7d89da-fe1c-42d5-e26e-bc960066cfac"
       },
       "source": [
-        "daily_bikes[:, 9, :] = (daily_bikes[:, 9, :] - 1.0) / 3.0"
+        "daily_bikes[:, 9, :] = (daily_bikes[:, 9, :] - 1.0) / 3.0\n",
+        "print(daily_bikes[:, 9, :] .shape)\n",
+        "daily_bikes[:, 9, :] "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([730, 24])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.0000, 0.0000,  ..., 0.3333, 0.3333],\n",
+              "        [0.3333, 0.3333,  ..., 0.0000, 0.0000],\n",
+              "        ...,\n",
+              "        [0.3333, 0.3333,  ..., 0.0000, 0.0000],\n",
+              "        [0.0000, 0.0000,  ..., 0.0000, 0.0000]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eFEWI6bOxmqQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are multiple possibilities for rescaling variables. We can either map their\n",
+        "range to [0.0, 1.0]"
+      ]
     },
     {
       "cell_type": "code",
@@ -785,7 +962,7 @@
         "daily_bikes[:, 10, :] = ((daily_bikes[:, 10, :] - temp_min)\n",
         "                         / (temp_max - temp_min))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -799,6 +976,19 @@
         "temp = daily_bikes[:, 10, :]\n",
         "daily_bikes[:, 10, :] = ((daily_bikes[:, 10, :] - torch.mean(temp))\n",
         "                         / torch.std(temp))"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w5ns6T4ixpOI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
