--- a/p1ch5/1_parameter_estimation.ipynb
+++ b/p1ch5/1_parameter_estimation.ipynb
@@ -1191,7 +1191,7 @@
         "colab": {}
       },
       "source": [
-        "t_un = 0.1 * t_u"
+        "t_un = 0.1 * t_u # t_u (x) gần gấp 10 làn tc (y)"
       ],
       "execution_count": 56,
       "outputs": []
@@ -1335,7 +1335,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 567
+          "height": 549
         },
         "outputId": "1cba29e1-b2dd-474f-a35e-5d74a0fc49d5"
       },
@@ -1376,7 +1376,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 567
+          "height": 549
         },
         "outputId": "469b3514-0e23-4f6f-af7e-8d59098ad25b"
       },
@@ -1615,10 +1615,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "b551f63d-05f5-46b0-a694-8efcf219a552"
+        "outputId": "a97abd51-9a98-4377-c816-345157a25b69"
       },
       "source": [
-        "n_epochs = 10\n",
+        "n_epochs = 5\n",
         "learning_rate = 1e-4\n",
         "params = torch.tensor([1.0, 0.0])\n",
         "t_u\n",
@@ -1626,15 +1626,17 @@
         "for epoch in range(1, n_epochs + 1):\n",
         "  print('-'*50)\n",
         "  w, b = params\n",
-        "  print('w: {} b: {}'.format(w,b))\n",
+        "  print('params: w: {} b: {}'.format(w,b))\n",
         "\n",
         "  t_p = w * t_u + b # <1>\n",
-        "  loss = ((t_p - t_c)**2).mean()\n",
-        "  print('t_p (y_pred):',t_p)\n",
+        "  print('Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\\n',t_p)\n",
         "  print('t_c (y):',t_c)\n",
         "  print('t_u (x):',t_u)\n",
+        "  loss = ((t_p - t_c)**2).mean()\n",
         "  print('loss: ((t_p - t_c)**2).mean() \\n',loss)\n",
+        "  #Tinh grad:\n",
         "  #grad = grad_fn(t_u, t_c, t_p, w, b)  # <2>\n",
+        "  print('Calculate grad - backward pass')\n",
         "  dloss_dtp = 2 * (t_p - t_c) / t_p.size(0)  # đạo hàm function loss\n",
         "  print('dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \\n',dloss_dtp)\n",
         "  dloss_dw = dloss_dtp * t_u # tính đạo hàm tại w\n",
@@ -1647,18 +1649,19 @@
         "  print('grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \\n',grad)\n",
         "\n",
         "  params = params - learning_rate * grad\n",
-        "  print('params',params)\n",
+        "  print('params= params - learning_rate * grad \\n',params)\n",
         "\n",
         "  print('Epoch %d, Loss %f' % (epoch, float(loss))) # <3>"
       ],
-      "execution_count": 128,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "--------------------------------------------------\n",
-            "w: 1.0 b: 0.0\n",
-            "t_p (y_pred): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
+            "params: w: 1.0 b: 0.0\n",
+            "Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\n",
+            " tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
             "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
@@ -1666,6 +1669,7 @@
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "loss: ((t_p - t_c)**2).mean() \n",
             " tensor(1763.8846)\n",
+            "Calculate grad - backward pass\n",
             "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
             " tensor([6.4000, 7.6182, 7.8545, 9.8000, 8.2364, 7.4364, 5.6182, 4.6909,\n",
             "        7.7091, 8.6182, 8.6182])\n",
@@ -1679,11 +1683,13 @@
             "dloss_db.sum() tensor(82.6000)\n",
             "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
             " tensor([4517.2969,   82.6000])\n",
-            "params tensor([ 0.5483, -0.0083])\n",
+            "params= params - learning_rate * grad \n",
+            " tensor([ 0.5483, -0.0083])\n",
             "Epoch 1, Loss 1763.884644\n",
             "--------------------------------------------------\n",
-            "w: 0.5482703447341919 b: -0.008259999565780163\n",
-            "t_p (y_pred): tensor([19.5650, 30.6401, 31.9011, 44.8951, 30.8594, 26.8022, 18.5781,\n",
+            "params: w: 0.5482703447341919 b: -0.008259999565780163\n",
+            "Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\n",
+            " tensor([19.5650, 30.6401, 31.9011, 44.8951, 30.8594, 26.8022, 18.5781,\n",
             "        11.9440, 26.5280, 33.1073, 37.4934])\n",
             "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
             "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
@@ -1691,6 +1697,7 @@
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "loss: ((t_p - t_c)**2).mean() \n",
             " tensor(323.0905)\n",
+            "Calculate grad - backward pass\n",
             "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
             " tensor([3.4664, 3.0255, 3.0729, 3.0718, 3.6108, 3.4186, 2.8324, 2.8989,\n",
             "        3.7324, 3.6559, 2.9988])\n",
@@ -1704,11 +1711,13 @@
             "dloss_db.sum() tensor(35.7843)\n",
             "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
             " tensor([1859.5493,   35.7843])\n",
-            "params tensor([ 0.3623, -0.0118])\n",
+            "params= params - learning_rate * grad \n",
+            " tensor([ 0.3623, -0.0118])\n",
             "Epoch 2, Loss 323.090546\n",
             "--------------------------------------------------\n",
-            "w: 0.36231541633605957 b: -0.011838428676128387\n",
-            "t_p (y_pred): tensor([12.9228, 20.2416, 21.0749, 29.6618, 20.3865, 17.7054, 12.2707,\n",
+            "params: w: 0.36231541633605957 b: -0.011838428676128387\n",
+            "Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\n",
+            " tensor([12.9228, 20.2416, 21.0749, 29.6618, 20.3865, 17.7054, 12.2707,\n",
             "         7.8866, 17.5242, 21.8720, 24.7705])\n",
             "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
             "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
@@ -1716,6 +1725,7 @@
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "loss: ((t_p - t_c)**2).mean() \n",
             " tensor(78.9296)\n",
+            "Calculate grad - backward pass\n",
             "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
             " tensor([2.2587, 1.1348, 1.1045, 0.3021, 1.7066, 1.7646, 1.6856, 2.1612,\n",
             "        2.0953, 1.6131, 0.6856])\n",
@@ -1729,11 +1739,13 @@
             "dloss_db.sum() tensor(16.5122)\n",
             "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
             " tensor([765.4667,  16.5122])\n",
-            "params tensor([ 0.2858, -0.0135])\n",
+            "params= params - learning_rate * grad \n",
+            " tensor([ 0.2858, -0.0135])\n",
             "Epoch 3, Loss 78.929634\n",
             "--------------------------------------------------\n",
-            "w: 0.2857687473297119 b: -0.013489648699760437\n",
-            "t_p (y_pred): tensor([10.1885, 15.9610, 16.6183, 23.3910, 16.0753, 13.9606,  9.6741,\n",
+            "params: w: 0.2857687473297119 b: -0.013489648699760437\n",
+            "Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\n",
+            " tensor([10.1885, 15.9610, 16.6183, 23.3910, 16.0753, 13.9606,  9.6741,\n",
             "         6.2163, 13.8177, 17.2469, 19.5331])\n",
             "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
             "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
@@ -1741,6 +1753,7 @@
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "loss: ((t_p - t_c)**2).mean() \n",
             " tensor(37.5528)\n",
+            "Calculate grad - backward pass\n",
             "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
             " tensor([ 1.7615,  0.3565,  0.2942, -0.8380,  0.9228,  1.0837,  1.2135,\n",
             "         1.8575,  1.4214,  0.7722, -0.2667])\n",
@@ -1754,11 +1767,13 @@
             "dloss_db.sum() tensor(8.5787)\n",
             "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
             " tensor([315.0790,   8.5787])\n",
-            "params tensor([ 0.2543, -0.0143])\n",
+            "params= params - learning_rate * grad \n",
+            " tensor([ 0.2543, -0.0143])\n",
             "Epoch 4, Loss 37.552845\n",
             "--------------------------------------------------\n",
-            "w: 0.2542608380317688 b: -0.014347515068948269\n",
-            "t_p (y_pred): tensor([ 9.0628, 14.1988, 14.7836, 20.8096, 14.3005, 12.4190,  8.6051,\n",
+            "params: w: 0.2542608380317688 b: -0.014347515068948269\n",
+            "Calulate y pred (tp) based on w,b : y_pred:  w * t_u + b:\n",
+            " tensor([ 9.0628, 14.1988, 14.7836, 20.8096, 14.3005, 12.4190,  8.6051,\n",
             "         5.5285, 12.2919, 15.3430, 17.3771])\n",
             "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
             "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
@@ -1766,6 +1781,7 @@
             "        21.8000, 48.4000, 60.4000, 68.4000])\n",
             "loss: ((t_p - t_c)**2).mean() \n",
             " tensor(30.5403)\n",
+            "Calculate grad - backward pass\n",
             "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
             " tensor([ 1.5569,  0.0362, -0.0393, -1.3073,  0.6001,  0.8035,  1.0191,\n",
             "         1.7325,  1.1440,  0.4260, -0.6587])\n",
@@ -1779,133 +1795,9 @@
             "dloss_db.sum() tensor(5.3127)\n",
             "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
             " tensor([129.6733,   5.3127])\n",
-            "params tensor([ 0.2413, -0.0149])\n",
-            "Epoch 5, Loss 30.540285\n",
-            "--------------------------------------------------\n",
-            "w: 0.2412935048341751 b: -0.014878788031637669\n",
-            "t_p (y_pred): tensor([ 8.5993, 13.4734, 14.0284, 19.7471, 13.5699, 11.7844,  8.1650,\n",
-            "         5.2453, 11.6637, 14.5592, 16.4896])\n",
-            "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
-            "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
-            "t_u (x): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
-            "        21.8000, 48.4000, 60.4000, 68.4000])\n",
-            "loss: ((t_p - t_c)**2).mean() \n",
-            " tensor(29.3512)\n",
-            "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
-            " tensor([ 1.4726, -0.0957, -0.1767, -1.5005,  0.4673,  0.6881,  0.9391,\n",
-            "         1.6810,  1.0298,  0.2835, -0.8201])\n",
-            "dloss_dw: dloss_dtp * t_u \n",
-            " tensor([  52.5718,   -5.3519,  -10.2813, -122.8938,   26.3069,   33.6465,\n",
-            "          31.8350,   36.6451,   49.8408,   17.1234,  -56.0930])\n",
-            "dloss_db:  dloss_dtp * 1.0 \n",
-            " tensor([ 1.4726, -0.0957, -0.1767, -1.5005,  0.4673,  0.6881,  0.9391,\n",
-            "         1.6810,  1.0298,  0.2835, -0.8201])\n",
-            "dloss_dw.sum() tensor(53.3495)\n",
-            "dloss_db.sum() tensor(3.9682)\n",
-            "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
-            " tensor([53.3495,  3.9682])\n",
-            "params tensor([ 0.2360, -0.0153])\n",
-            "Epoch 6, Loss 29.351152\n",
-            "--------------------------------------------------\n",
-            "w: 0.2359585464000702 b: -0.015275613404810429\n",
-            "t_p (y_pred): tensor([ 8.4084, 13.1748, 13.7175, 19.3097, 13.2692, 11.5231,  7.9837,\n",
-            "         5.1286, 11.4051, 14.2366, 16.1243])\n",
-            "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
-            "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
-            "t_u (x): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
-            "        21.8000, 48.4000, 60.4000, 68.4000])\n",
-            "loss: ((t_p - t_c)**2).mean() \n",
-            " tensor(29.1489)\n",
-            "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
-            " tensor([ 1.4379, -0.1500, -0.2332, -1.5800,  0.4126,  0.6406,  0.9061,\n",
-            "         1.6597,  0.9827,  0.2248, -0.8865])\n",
-            "dloss_dw: dloss_dtp * t_u \n",
-            " tensor([  51.3330,   -8.3870,  -13.5711, -129.4061,   23.2283,   31.3235,\n",
-            "          30.7178,   36.1825,   47.5650,   13.5803,  -60.6361])\n",
-            "dloss_db:  dloss_dtp * 1.0 \n",
-            " tensor([ 1.4379, -0.1500, -0.2332, -1.5800,  0.4126,  0.6406,  0.9061,\n",
-            "         1.6597,  0.9827,  0.2248, -0.8865])\n",
-            "dloss_dw.sum() tensor(21.9303)\n",
-            "dloss_db.sum() tensor(3.4148)\n",
-            "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
-            " tensor([21.9303,  3.4148])\n",
-            "params tensor([ 0.2338, -0.0156])\n",
-            "Epoch 7, Loss 29.148882\n",
-            "--------------------------------------------------\n",
-            "w: 0.23376551270484924 b: -0.015617088414728642\n",
-            "t_p (y_pred): tensor([ 8.3298, 13.0519, 13.5895, 19.1298, 13.1454, 11.4155,  7.9090,\n",
-            "         5.0805, 11.2986, 14.1038, 15.9739])\n",
-            "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
-            "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
-            "t_u (x): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
-            "        21.8000, 48.4000, 60.4000, 68.4000])\n",
-            "loss: ((t_p - t_c)**2).mean() \n",
-            " tensor(29.1138)\n",
-            "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
-            " tensor([ 1.4236, -0.1724, -0.2564, -1.6128,  0.3901,  0.6210,  0.8926,\n",
-            "         1.6510,  0.9634,  0.2007, -0.9138])\n",
-            "dloss_dw: dloss_dtp * t_u \n",
-            " tensor([  50.8226,   -9.6364,  -14.9253, -132.0857,   21.9609,   30.3671,\n",
-            "          30.2575,   35.9917,   46.6280,   12.1219,  -62.5059])\n",
-            "dloss_db:  dloss_dtp * 1.0 \n",
-            " tensor([ 1.4236, -0.1724, -0.2564, -1.6128,  0.3901,  0.6210,  0.8926,\n",
-            "         1.6510,  0.9634,  0.2007, -0.9138])\n",
-            "dloss_dw.sum() tensor(8.9964)\n",
-            "dloss_db.sum() tensor(3.1869)\n",
-            "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
-            " tensor([8.9964, 3.1869])\n",
-            "params tensor([ 0.2329, -0.0159])\n",
-            "Epoch 8, Loss 29.113848\n",
-            "--------------------------------------------------\n",
-            "w: 0.23286586999893188 b: -0.015935774892568588\n",
-            "t_p (y_pred): tensor([ 8.2974, 13.0013, 13.5369, 19.0558, 13.0944, 11.3712,  7.8782,\n",
-            "         5.0605, 11.2548, 14.0492, 15.9121])\n",
-            "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
-            "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
-            "t_u (x): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
-            "        21.8000, 48.4000, 60.4000, 68.4000])\n",
-            "loss: ((t_p - t_c)**2).mean() \n",
-            " tensor(29.1071)\n",
-            "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
-            " tensor([ 1.4177, -0.1816, -0.2660, -1.6262,  0.3808,  0.6129,  0.8869,\n",
-            "         1.6474,  0.9554,  0.1908, -0.9251])\n",
-            "dloss_dw: dloss_dtp * t_u \n",
-            " tensor([  50.6121,  -10.1508,  -15.4827, -133.1876,   21.4392,   29.9731,\n",
-            "          30.0676,   35.9127,   46.2420,   11.5217,  -63.2751])\n",
-            "dloss_db:  dloss_dtp * 1.0 \n",
-            " tensor([ 1.4177, -0.1816, -0.2660, -1.6262,  0.3808,  0.6129,  0.8869,\n",
-            "         1.6474,  0.9554,  0.1908, -0.9251])\n",
-            "dloss_dw.sum() tensor(3.6721)\n",
-            "dloss_db.sum() tensor(3.0930)\n",
-            "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
-            " tensor([3.6721, 3.0930])\n",
-            "params tensor([ 0.2325, -0.0162])\n",
-            "Epoch 9, Loss 29.107145\n",
-            "--------------------------------------------------\n",
-            "w: 0.2324986606836319 b: -0.016245078295469284\n",
-            "t_p (y_pred): tensor([ 8.2840, 12.9804, 13.5152, 19.0254, 13.0734, 11.3529,  7.8655,\n",
-            "         5.0522, 11.2367, 14.0267, 15.8867])\n",
-            "t_c (y): tensor([ 0.5000, 14.0000, 15.0000, 28.0000, 11.0000,  8.0000,  3.0000,\n",
-            "        -4.0000,  6.0000, 13.0000, 21.0000])\n",
-            "t_u (x): tensor([35.7000, 55.9000, 58.2000, 81.9000, 56.3000, 48.9000, 33.9000,\n",
-            "        21.8000, 48.4000, 60.4000, 68.4000])\n",
-            "loss: ((t_p - t_c)**2).mean() \n",
-            " tensor(29.1052)\n",
-            "dloss_dtp: 2 * (t_p - t_c) / t_p.size(0) \n",
-            " tensor([ 1.4153, -0.1854, -0.2700, -1.6317,  0.3770,  0.6096,  0.8846,\n",
-            "         1.6459,  0.9521,  0.1867, -0.9297])\n",
-            "dloss_dw: dloss_dtp * t_u \n",
-            " tensor([  50.5250,  -10.3625,  -15.7121, -133.6400,   21.2244,   29.8107,\n",
-            "          29.9889,   35.8797,   46.0829,   11.2748,  -63.5913])\n",
-            "dloss_db:  dloss_dtp * 1.0 \n",
-            " tensor([ 1.4153, -0.1854, -0.2700, -1.6317,  0.3770,  0.6096,  0.8846,\n",
-            "         1.6459,  0.9521,  0.1867, -0.9297])\n",
-            "dloss_dw.sum() tensor(1.4803)\n",
-            "dloss_db.sum() tensor(3.0544)\n",
-            "grad:  grad=torch.stack([dloss_dw.sum(), dloss_db.sum()]) \n",
-            " tensor([1.4803, 3.0544])\n",
-            "params tensor([ 0.2324, -0.0166])\n",
-            "Epoch 10, Loss 29.105242\n"
+            "params= params - learning_rate * grad \n",
+            " tensor([ 0.2413, -0.0149])\n",
+            "Epoch 5, Loss 30.540285\n"
           ],
           "name": "stdout"
         }
